[gd_scene load_steps=4 format=3 uid="uid://usb3pc0w3axj"]

[ext_resource type="Script" path="res://Scripts/Gumkid.gd" id="1_ihksr"]
[ext_resource type="PackedScene" uid="uid://bgtk1omspr41a" path="res://scenes/GumkidModel.tscn" id="2_g12so"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_y0o5m"]
radius = 1.0

[node name="Gumkid" type="Node3D"]
script = ExtResource("1_ihksr")

[node name="CaptureArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="CaptureArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00064, 0)
shape = SubResource("CylinderShape3D_y0o5m")

[node name="GumkidModel" parent="." instance=ExtResource("2_g12so")]

[connection signal="body_entered" from="CaptureArea" to="." method="_on_capture_area_body_entered"]
